Adapts validation alert position to prevent text from jumping

--- a/src/app/main-content/add-task/task-overview/task-overview.component.scss
+++ b/src/app/main-content/add-task/task-overview/task-overview.component.scss
@@ -53,6 +53,8 @@ textarea {
 
 .validation-alert {
   font-size: 14px;
+  position: absolute;
+  bottom: -20px;
 }
 
 .file-upload-trigger {
